--- a/tests-lazypb/Cargo.toml
+++ b/tests-lazypb/Cargo.toml
@@ -9,7 +9,7 @@ license = "MIT"
 anyhow = "1"
 bytes = "1"
 cfg-if = "1"
-prost = { path = ".." }
+prost = { path = "..", features = ["lazypb"] }
 prost-types = { path = "../prost-types" }
 lazypb = { path = "../lazypb" }
 
