--- a/protobuf/Cargo.toml
+++ b/protobuf/Cargo.toml
@@ -10,14 +10,15 @@ edition = "2018"
 
 [dependencies]
 bytes = { version = "1", default-features = false }
-prost = { path = ".." }
+prost = { path = "..", features = ["lazypb"] }
 prost-types = { path = "../prost-types" }
+lazypb = { path = "../lazypb" }
 
 [build-dependencies]
 anyhow = "1"
 curl = "0.4"
 flate2 = "1.0"
-prost-build = { path = "../prost-build" }
+prost-build = { path = "../prost-build", features = ["lazypb"] }
 tar = "0.4"
 tempfile = "3"
 
